[tool.poetry]
name = "basic-anvil-test"
version = "0.1.0"
description = "Example project using anvil-testcontainer"
authors = ["Evangelos Pappas <epappas@evalonlabs.com>"]

[tool.poetry.dependencies]
python = "^3.12"
anvil-testcontainer = { path = "../.." }
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
